feat.: demo mcp command compatible with windows