@@ -21,6 +21,7 @@ import com.jd.oxygent.core.oxygent.utils.EnvUtils;
 import com.jd.oxygent.core.oxygent.samples.server.masprovider.MasFactoryRegistry;
 import com.jd.oxygent.core.oxygent.samples.server.masprovider.engine.annotation.OxySpaceBean;
 import com.jd.oxygent.core.oxygent.samples.server.utils.GlobalDefaultOxySpaceMapping;
+import com.jd.oxygent.core.oxygent.utils.OSUtil;
 
 import java.util.Arrays;
 import java.util.HashMap;
@@ -39,7 +40,10 @@ public class DemoTrustMode {
                         .modelName(EnvUtils.getEnv("OXY_LLM_MODEL_NAME"))
                         .build(),
 
-                new StdioMCPClient("time_tools", "uvx", List.of("mcp-server-time", "--local-timezone=Asia/Shanghai")),
+                OSUtil.isWindows() ?
+                        new StdioMCPClient("time_tools", "cmd.exe", Arrays.asList("/c", "uvx", "mcp-server-time", "--local-timezone=Asia/Shanghai"))
+                        :
+                        new StdioMCPClient("time_tools", "uvx", Arrays.asList("mcp-server-time", "--local-timezone=Asia/Shanghai")),
 
                 ReActAgent.builder()
                         .name("normal_agent")
