@@ -26,6 +26,7 @@ import com.jd.oxygent.core.oxygent.utils.EnvUtils;
 import com.jd.oxygent.core.oxygent.samples.server.masprovider.MasFactoryRegistry;
 import com.jd.oxygent.core.oxygent.samples.server.masprovider.engine.annotation.OxySpaceBean;
 import com.jd.oxygent.core.oxygent.samples.server.utils.GlobalDefaultOxySpaceMapping;
+import com.jd.oxygent.core.oxygent.utils.OSUtil;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.Arrays;
@@ -180,11 +181,10 @@ public class DemoDataScope {
                         .build(),
 
                 // 2. MCP Client - corresponds to Python version's oxy.StdioMCPClient
-                new StdioMCPClient(
-                        "time_tools",
-                        "uvx",
-                        List.of("mcp-server-time", "--local-timezone=Asia/Shanghai")
-                ),
+                OSUtil.isWindows() ?
+                        new StdioMCPClient("time_tools", "cmd.exe", Arrays.asList("/c", "uvx", "mcp-server-time", "--local-timezone=Asia/Shanghai"))
+                        :
+                        new StdioMCPClient("time_tools", "uvx", Arrays.asList("mcp-server-time", "--local-timezone=Asia/Shanghai")),
 
                 // 3. Master Agent - corresponds to Python version's master_agent
                 ReActAgent.builder()
